# webrtc_apm

apm/: build.gradle
apm/src/main/jni/: CMakeLists.txt
apm/src/main/jni/faac/: AACEncoder.cpp  CMakeLists.txt
apm/src/main/jni/lamemp3/: CMakeLists.txt
apm/src/main/jni/soundtouch/: CMakeLists.txt
apm/src/main/jni/webrtc/: CMakeLists.txt
apm/src/main/jni/webrtc/webrtc/: CMakeLists.txt
apm/src/main/jni/webrtc/webrtc/modules/audio_processing/aec/: aec_core_neon.c
app/: build.gradle
app/src/main/java/com/google/webrtc/apmdemo/: MainActivity.java  TrackUtils.java  VideoInfo.java  VideoUitls.java
gradle/wrapper/: gradle-wrapper.properties
